<resources>
    <string name="app_name">Caisse</string>
    <string name="login">Login</string>
    <string name="caisse">Caisse</string>
    <string name="someone_gmail_com">someone@gmail.com</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="need_help">Need Help?</string>
    <string name="welcome">welcome</string>
    <string name="logout">Logout</string>
    <string name="splash_image">Splash Image</string>
    <string name="cart">Cart</string>
    <string name="settings">Settings</string>
    <string name="ticket">Ticket</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="developer">developer</string>
    <string name="name">Name</string>
    <string name="account_info">Account Info</string>
    <string name="todo">Todo</string>
    <string name="role">User</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="dob">Date of birth</string>
    <string name="store">Store</string>
    <string name="location">Location</string>
    <string name="country">Country</string>
    <string name="quantity">10</string>
    <string name="product">Product</string>
    <string name="price">10 TND</string>
    <string name="scan">Scan</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="content_description_search">Search Icon</string>
    <string name="more_app_bar_title">More</string>
    <string name="content_description_more">More Icon</string>
    <string name="add_img_item_desc">Image Item</string>
    <string name="add_img_close_btn_desc">Image Remove Button</string>
    <string name="add_product_error_img_upload">Error uploading Images, Try Again!</string>
    <string name="product_actual_price_text"><strike>$1000.00</strike></string>
    <string name="product_offer_percent_text">25% Off</string>
    <string name="pro_details_add_to_cart_btn_text">Add To Cart</string>
    <string name="pro_details_go_to_cart_btn_text">Go To Cart</string>
    <string name="pro_details_delete_btn_desc">Remove Product Button</string>
    <string name="cart_check_out_btn">Scan</string>
    <string name="no_items_in_cart_text">No items in cart</string>
    <string name="bar_code">Bar code value</string>
    <string name="product_title">Some product title</string>
    <string name="number_items_in_cart_text">0 item(s)</string>
    <string name="cart_clear">Clear</string>
    <string name="loading">Loading Data…</string>
    <string name="paid">Paid</string>
    <string name="rest">Rest</string>
    <string name="nbr_items">Items(3)</string>
    <string name="generate_ticket">Generate Ticket</string>
</resources>