<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/segoe_ui_bold"
                android:text="@string/caisse"
                android:textColor="@color/color_white"
                android:textSize="36sp" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/ic_card_background"
        android:elevation="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/seg_ui_semibold"
            android:text="@string/login"
            android:textColor="@color/color_black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/ic_edit_text_background"
                android:drawableEnd="@drawable/user_icon"
                android:drawableTint="@color/color_black"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/someone_gmail_com"
                android:inputType="textEmailAddress"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_placeholder"
                tools:ignore="Autofill"
                tools:targetApi="m" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:background="@drawable/ic_edit_text_background"
                android:drawableEnd="@drawable/lock_icon"
                android:drawableTint="@color/color_black"
                android:fontFamily="@font/seg_ui_semibold"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="26dp"
                android:paddingRight="26dp"
                android:textColor="@color/color_black"
                android:textColorHint="@color/color_placeholder"
                tools:ignore="Autofill"
                tools:targetApi="m" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="18dp"
                android:buttonTint="@color/color_black"
                android:fontFamily="@font/seg_ui_semibold"
                android:minHeight="48dp"
                android:text="@string/remember_me"
                android:textColor="@color/color_black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="48dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/viewTextHelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/need_help"
                    android:textColor="@color/color_black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_button_background"
                    android:fontFamily="@font/seg_ui_semibold"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/color_white"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf" />
    </RelativeLayout>
</LinearLayout>