<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10sp"
    android:clickable="false"
    android:focusable="true"
    app:cardElevation="0sp"
    app:strokeColor="@color/color_black"
    app:strokeWidth="1sp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/product_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp">

        <ImageView
            android:id="@+id/product_image_view"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_marginStart="8sp"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="8sp"
            android:background="@drawable/round_outline_rect"
            android:contentDescription="@string/add_img_item_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cart_product_title"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginTop="8sp"
            android:layout_marginEnd="5sp"
            android:lines="2"
            android:text="@string/product_title"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/cart_product_like_btn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/product_image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/cart_product_like_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:background="?android:selectableItemBackgroundBorderless"
            app:layout_constraintBottom_toBottomOf="@+id/cart_product_title"
            app:layout_constraintEnd_toStartOf="@+id/cart_product_delete_btn"
            app:layout_constraintTop_toTopOf="@+id/cart_product_title"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/cart_product_delete_btn"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:contentDescription="@string/pro_details_delete_btn_desc"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/cart_product_quantity_buttons_layout"
            app:layout_constraintEnd_toEndOf="@+id/cart_product_quantity_buttons_layout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/product_image_view"
            app:layout_constraintTop_toTopOf="@+id/cart_product_like_btn"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_delete_24"
            app:tint="@color/gray" />

        <TextView
            android:id="@+id/cart_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginBottom="10sp"
            android:text="@string/price"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textColor="@color/color_primary"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image_view"
            app:layout_constraintTop_toBottomOf="@+id/cart_product_title"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/cart_product_quantity_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8sp"
            android:background="@drawable/layout_background_rounded_corners"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/cart_product_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/cart_product_price"
            app:layout_constraintTop_toTopOf="@+id/cart_product_price"
            app:layout_constraintVertical_bias="1.0">

            <ImageButton
                android:id="@+id/cart_product_minus_btn"
                android:layout_width="35sp"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_remove_24" />

            <TextView
                android:id="@+id/cart_product_quantity_text_View"
                android:layout_width="40sp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/quantity"
                android:textAppearance="@style/TextAppearance.MyTheme.Body1"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/cart_product_plus_btn"
                android:layout_width="35sp"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:background="?android:selectableItemBackgroundBorderless"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/ic_add_24" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

